--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.11.1",
+    "joi": "^17.12.2",
     "js-circle-progress": "^1.0.0-beta.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
